--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
